Upgraded to JUnit5 + AssertJ, track some basic statistics, let servlet return those statistics